# Durkate

./: .dockerignore  .firebaserc  .gitignore  .lintstagedrc.json  README.md  biome.json  firebase.json  fly.toml  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  turbo.json
.github/workflows/: ci.yml
apps/card-sandbox/: index.html  package.json  tsconfig.json  vite.config.ts
apps/card-sandbox/src/: main.ts  vite-env.d.ts
apps/server/: Dockerfile  README.md  package.json  tsconfig.json
apps/server/src/: app.test.ts  app.ts  gateway.ts  (+6 more)
apps/web/: README.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/worker/: .dev.vars.example  README.md  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
docs/decisions/: 0001-maximalist-package-layout.md  0002-hybrid-engine-architecture.md  0003-determinism-strategy.md  0004-pure-pixi-client.md  0005-authoritative-server-redacted-snapshots.md  0006-single-branch-worktree-workflow.md  0007-hosting.md  0008-trump-nullability-in-snapshot.md  0009-disconnect-forfeit.md  0010-n-player-ffa-rules.md  0011-ffa-throw-in-window.md
docs/spikes/: image_pipeline_spike.md
tools/: README.md  pyproject.toml
tools/skins/sources/: README.md
tools/spikes/: __init__.py  crush.py  grid.py  http_client.py  palette.json  palette.py  pipeline.py  process.py  scrape_curated.py  scrape_met.py  scrape_wikimedia.py  seed_urls.py
tools/spikes/scripts/: export_palette.py
tools/src/durak_tools/: __init__.py  __main__.py  converter.py  index_emitter.py  packer.py  scraper.py  skins.py
(+83 files in other folders)
