[project]
name = "durak-tools"
version = "0.0.0"
description = "Asset pipeline for the Durak monorepo. Scrapes, converts, packs, and emits a typed index for sprite assets consumed by apps/web."
requires-python = ">=3.12"
dependencies = [
    "Pillow>=11.0.0",
]

[project.scripts]
build = "durak_tools.__main__:build"
check = "durak_tools.__main__:check"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/durak_tools"]
